Projet GL/Projet_GL/src/test/deca/context/valid/increment1/bool-init.deca
// Test bool := true et bool := false

// Historique : cree le 10/01/2023

{
    boolean b = true;
    boolean c = false;
}