Projet GL/Projet_GL/src/test/deca/context/invalid/increment1/false-equals-true.deca
// Test false := true

//Résulats : Ligne 9 false identificateur de constante

//Historique : 09/01/2023

{
    //Must be refused
    false = true;
}